# supahero-hackathon

./: .gitignore  drizzle.config.ts  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml
api/: index.py  requirements.txt
app/: layout.tsx  page.tsx
app/dashboard/: layout.tsx  page.tsx
app/dashboard/upload/: page.tsx
app/server/db/: schema.ts
app/signin/: page.tsx
app/signup/: page.tsx
components/: Dropzone.tsx  Login.tsx  Sidebar.tsx
hooks/: supabase.tsx
lib/: scraper.ts
lib/server/db/: index.ts
providers/: User.provider.jsx
public/: temp.js
shop_crew/: Dockerfile  README.md  pyproject.toml  report.md
shop_crew/src/shop_crew/: crew.py  main.py
shop_crew/src/shop_crew/config/: agents.yaml  tasks.yaml
supabase/: config.toml
supabase/migrations/meta/: 0000_snapshot.json  _journal.json
