[tool.poetry]
name = "shop_crew"
version = "0.1.0"
description = "shop-crew using crewAI"
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = ">=3.10,<=3.13"
crewai = { extras = ["tools"], version = "^0.41.1" }

[tool.poetry.scripts]
shop_crew = "shop_crew.main:run"
train = "shop_crew.main:train"
replay = "shop_crew.main:replay"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
